--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -806,13 +806,12 @@ code {
  */
 .action-bar {
   position: relative;
-
 }
 .action-bar.action-bar-half {
   z-index: 10;
 }
 .action-bar > .btn-floating {
-  right: 0;
+  right: 1rem;
 }
 
 /*!
@@ -1022,15 +1021,27 @@ body.module-search-active > .search-wrapper {
   justify-content: space-between;
 }
 .fast-menu > a {
-      flex: 1 1 auto !important;
   -ms-flex: 1 1 auto !important;
+      flex: 1 1 auto !important;
 
   padding: 3rem 1rem;
 
   text-align: center;
 
-  -webkit-transition: all 200ms cubic-bezier(.25, .46, .45, .94);
           transition: all 200ms cubic-bezier(.25, .46, .45, .94);
+  -webkit-transition: all 200ms cubic-bezier(.25, .46, .45, .94);
+
+  border-radius: 1rem;
+}
+.fast-menu > a:hover {
+  border-radius: 2rem;
+
+  -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .1), inset 0 0 1px rgba(0, 0, 0, .1);
+          box-shadow: inset 0 0 4px rgba(0, 0, 0, .1), inset 0 0 1px rgba(0, 0, 0, .1);
+}
+.fast-menu > a:active {
+  -webkit-box-shadow: inset 0 0 1rem rgba(0, 0, 0, .1);
+          box-shadow: inset 0 0 1rem rgba(0, 0, 0, .1);
 }
 
 /*!
