--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1315,10 +1315,6 @@ footer.page-footer > .container > .row > .col > img#vz-logo {
 
   #dock-content > .menu > .collection {
     margin: 0 0 12px;
-    background-color: #fff;
-
-    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   }
 
   .dock-menu {
@@ -1902,6 +1898,8 @@ table tr {
   overflow-y: hidden;
   max-height: 100% !important;
   background-color: #fff;
+  padding: 1rem 0;
+  border-radius: .6rem;
 }
 .modal.with-bg {
   background-color: #fff;
